# IceYOLO

./: .gitignore  README.md  adapter_train.py  predict.py  pyproject.toml  train.py  val.py  visualize_resample.py
assets/: adapter-v2.pth  rs_utils-0.1.4-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  rs_utils-0.1.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  rs_utils-0.1.4-cp312-none-win_amd64.whl
preprocessor/: preprocessor.py  train.py
rs_utils/: Cargo.toml  pyproject.toml
rs_utils/src/: lib.rs
scripts/: adapter_train.sh  paratera_predict.sh  paratera_run.sh  v100_run.sh
ultralytics/: pyproject.toml
ultralytics/cfg/: default.yaml
ultralytics/cfg/models/v8/: yolov8-seg-backboneattn.yaml  yolov8-seg-bifpn-4c.yaml  yolov8-seg-cbam-4c.yaml  yolov8-seg-cbam.yaml  yolov8-seg-ema-4c.yaml  yolov8-seg-ema.yaml  yolov8-seg-full.yaml  yolov8-seg-kcam-4c.yaml  yolov8-seg-multi.yaml  yolov8-seg-original-4c.yaml  yolov8-seg-original.yaml  yolov8-seg-p6-ema.yaml  yolov8-seg-sknet.yaml  yolov8-seg-triplet.yaml
ultralytics/data/: augment.py  base.py  converter.py  dataset.py  utils.py
ultralytics/data/explorer/: utils.py
ultralytics/engine/: model.py  predictor.py  trainer.py  validator.py
ultralytics/models/yolo/detect/: train.py  val.py
ultralytics/models/yolo/obb/: train.py
ultralytics/models/yolo/pose/: train.py
ultralytics/models/yolo/segment/: train.py  val.py
ultralytics/models/yolo/world/: train.py
ultralytics/nn/: bifpn.py  tasks.py
ultralytics/nn/modules/: __init__.py  adapter.py  block.py  conv.py  custom.py  head.py
ultralytics/utils/: metrics.py  ops.py  plotting.py
