[project]
name = "yuka"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "4o3F", email = "4o3f@proton.me" }
]
dependencies = [
    "matplotlib>=3.9.0",
    "opencv-python>=4.6.0",
    "pillow>=7.1.2",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "tqdm>=4.64.0", # progress bars
    "psutil", # system utilization
    "py-cpuinfo", # display CPU info
    "thop>=0.1.1", # FLOPs computation
    "pandas>=1.1.4",
    "seaborn>=0.11.0", # plotting
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/yuka"]

[[tool.rye.sources]]
name = "torch"
url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cu121"
type = "index"
