[project]
name = "yuka"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "4o3F", email = "4o3f@proton.me" }
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "ultralytics @ file:///${PROJECT_ROOT}/ultralytics",
]

[tool.rye]
virtual = true

[tool.rye.workspace]
members = ["ultralytics"]
